--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
 apply plugin:'base'
+apply plugin: 'war'
 
 group = 'com.tutorialspoint.projects.googleservice'
 version = '0.0.1-SNAPSHOT'
